fix scrollbar

--- a/app/styles/main.less
+++ b/app/styles/main.less
@@ -47,6 +47,7 @@ body {
   color: #111;
   max-width: 100vw;
   overflow-x: hidden;
+  height: 125vh;
 }
 
 .content {
@@ -214,7 +215,6 @@ body {
 }
 
 .page-work {
-  overflow: visible;
   .sans   { font: bold 1.8rem/1.5 Montserrat, @font-family-sans-serif; }
   .serif { font: italic 2.2rem/1.5 Vollkorn, @font-family-serif; }
   .more  { font: bold 2.2rem/1.5 Montserrat, @font-family-sans-serif; margin-top: 3.6rem; opacity: 1; display: inline-block; }
